--- a/html-css-course/intro-to-html/lessons/7/7g.html
+++ b/html-css-course/intro-to-html/lessons/7/7g.html
@@ -3,33 +3,7 @@
 
 <head>
   <title>Challenge 7g</title>
-  <style>
-    .img-profile {
-      width: 100px;
-      height: 100px;
-      border-radius: 50px;
-      object-fit: cover;
-      vertical-align: middle;
-    }
-    .tweet-state {
-      width: 300px;
-      height: 30px;
-      font-size: 20px;
-      padding-left: 10px;
-      border: none;
-      vertical-align: middle;
-    }
-    .tweet-button {
-      border: none;
-      color: white;
-      font-weight: bold;
-      background-color: rgb(52, 129, 243);
-      height: 30px;
-      width: 70px;
-      border-radius: 20px;
-      vertical-align: middle;
-    }
-  </style>
+  <link rel="stylesheet" href="7g.css">
 </head>
 
 <body>
