Fix on div exercises

--- a/html-css-course/intro-to-html/lessons/9/9h.html
+++ b/html-css-course/intro-to-html/lessons/9/9h.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Exercise 8b</title>
+    <title>Challenge 9h</title>
     <link rel="stylesheet" href="9h.css">
 </head>
 
