More practice with layout flex. Plus challenges.

--- a/html-css-course/intro-to-html/lessons/12/12c.html
+++ b/html-css-course/intro-to-html/lessons/12/12c.html
@@ -2,19 +2,7 @@
 <html>
     <head>
         <title>Exercise 12c</title>
-        <style>
-            .main {
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-            }
-            .item1, 
-            .item2,
-            .item3,
-            .item4 {
-                background-color: lightcoral;
-            }
-        </style>
+        <link rel="stylesheet" href="12c.css">
     </head>
     <body>
         <div class="main">
