--- a/html-css-course/position.html
+++ b/html-css-course/position.html
@@ -6,6 +6,7 @@
     <body style="
         height: 3000px;
         padding-top: 60px;
+        padding-left: 80px;
     ">
         <div style="
             background-color: black;
@@ -16,6 +17,16 @@
             right: 0;
             height: 50px;
         ">header</div>
+
+        <div style="
+            background-color: green;
+            color: white;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            top: 50px;
+            width: 72px;
+        ">sidebar</div>
 
         <div style="
             background-color: lightblue;
