--- a/html-css-course/youtube.html
+++ b/html-css-course/youtube.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/header.css">
   <link rel="stylesheet" href="styles/video.css">
+  <link rel="stylesheet" href="styles/sidebar.css">
 </head>
 
 <body>
@@ -37,6 +38,10 @@
       <img class="notifications-icon" src="icons/notifications.svg" alt="">
       <img class="current-user-picture" src="channel-pictures/unnamed.jpg" alt="">
     </div>
+  </div>
+
+  <div class="sidebar">
+    sidebar
   </div>
 
   <div class="video-grid">
