new stylesheet file

--- a/html-css-course/intro-to-html/lessons/14/14f.html
+++ b/html-css-course/intro-to-html/lessons/14/14f.html
@@ -3,76 +3,7 @@
 
 <head>
     <title>Challenge 14f</title>
-    <style>
-        div {
-            font-family: Arial;
-        }
-
-        .sidebar-servers {
-            background-color: rgb(30, 33, 36);
-
-            position: fixed;
-            top: 0;
-            bottom: 0;
-            left: 0;
-
-            padding-left: 15px;
-            padding-right: 15px;
-            padding-top: 15px;
-        }
-
-        .picture {
-            cursor: pointer;
-
-            height: 80px;
-            width: 80px;
-            border-radius: 50%;
-
-            margin-bottom: 20px;
-            object-fit: cover;
-        }
-
-        .sidebar-channels {
-            background-color: rgb(40, 43, 48);
-
-            position: fixed;
-            top: 0;
-            bottom: 0;
-            left: 110px;
-
-            width: 180px;
-
-            padding-left: 15px;
-            padding-right: 15px;
-        }
-
-        .server-header {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-
-            margin-top: 15px;
-            margin-bottom: 15px;
-        }
-        .server-name {
-            color: white;
-            cursor: pointer;
-        }
-        .new-channel {
-            color: gray;
-            font-size: 20px;
-            font-weight: bold;
-
-            cursor: pointer;
-        }
-
-        .channel {
-            color: gray;
-
-            margin-bottom: 15px;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="14f.css">
 </head>
 
 <body>
