--- a/html-css-course/position.html
+++ b/html-css-course/position.html
@@ -17,7 +17,9 @@
             right: 0;
             height: 50px;
             z-index: 100;
-        ">header</div>
+        ">
+            header
+        </div>
 
         <div style="
             background-color: green;
@@ -55,7 +57,9 @@
             height: 200px;
             width: 200px;
             position: static;
-        ">div 1</div>
+        ">
+            div 1
+        </div>
         
         <div style="
             background-color: lightpink;
