--- a/html-css-course/youtube.html
+++ b/html-css-course/youtube.html
@@ -35,7 +35,10 @@
     <div class="right-section">
       <img class="upload-icon" src="icons/upload.svg" alt="">
       <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="">
-      <img class="notifications-icon" src="icons/notifications.svg" alt="">
+      <div class="notifications-icon-container">
+        <img class="notifications-icon" src="icons/notifications.svg" alt="">
+        <div class="notifications-count">3</div>
+      </div>
       <img class="current-user-picture" src="channel-pictures/unnamed.jpg" alt="">
     </div>
   </div>
@@ -50,6 +53,9 @@
 
       <div class="thumbnail-row">
         <img class="thumbnail" src="thumbnails/thumbnail-1.webp" alt="">
+        <div class="video-time">
+          14:20
+        </div>
       </div>
   
       <div class="video-info-grid">
@@ -74,6 +80,9 @@
   
       <div class="thumbnail-row">
         <img class="thumbnail" src="thumbnails/thumbnail-2.webp" alt="">
+        <div class="video-time">
+          8:22
+        </div>
       </div>
   
       <div class="video-info-grid">
@@ -98,6 +107,9 @@
   
       <div class="thumbnail-row">
         <img class="thumbnail" src="thumbnails/thumbnail-3.webp" alt="">
+        <div class="video-time">
+          9:13
+        </div>
       </div>
   
       <div class="video-info-grid">
@@ -120,6 +132,9 @@
   
       <div class="thumbnail-row">
         <img class="thumbnail" src="thumbnails/thumbnail-4.webp" alt="">
+        <div class="video-time">
+          22:09
+        </div>
       </div>
   
       <div class="video-info-grid">
@@ -142,6 +157,9 @@
   
       <div class="thumbnail-row">
         <img class="thumbnail" src="thumbnails/thumbnail-5.webp" alt="">
+        <div class="video-time">
+          11:17
+        </div>
       </div>
   
       <div class="video-info-grid">
@@ -166,6 +184,9 @@
   
       <div class="thumbnail-row">
         <img class="thumbnail" src="thumbnails/thumbnail-6.webp" alt="">
+        <div class="video-time">
+          19:15
+        </div>
       </div>
   
       <div class="video-info-grid">
