--- a/html-css-course/youtube.html
+++ b/html-css-course/youtube.html
@@ -16,24 +16,25 @@
 
 <body>
 
-  <div class="header">
+  <header class="header">
     <div class="left-section">
       <img class="hamburger-menu" src="icons/hamburger-menu.svg" alt="">
       <img class="youtube-logo" src="icons/youtube-logo.svg" alt="">
     </div>
 
     <div class="middle-section">
-       <input class="search-bar" type="text" placeholder="Search">
-       <button class="search-button">
+      <input class="search-bar" type="text" placeholder="Search">
+      <button class="search-button">
         <img class="search-icon" src="icons/search.svg" alt="">
         <div class="tooltip">Search</div>
-       </button>
-       <button class="voice-search-button">
+      </button>
+      <!-- Put position absolute inside position relative -->
+      <button class="voice-search-button">
         <img class="voice-search-icon" src="icons/voice-search-icon.svg" alt="">
         <div class="tooltip">Search with your voice</div>
-       </button>
+      </button>
     </div>
-    
+
     <div class="right-section">
       <div class="upload-icon-container">
         <img class="upload-icon" src="icons/upload.svg" alt="">
@@ -56,9 +57,9 @@
       </div>
       <img class="current-user-picture" src="channel-pictures/unnamed.jpg" alt="">
     </div>
-  </div>
+  </header>
 
-  <div class="sidebar">
+  <nav class="sidebar">
     <div class="sidebar-link">
       <img src="icons/home.svg" alt="">
       <div>Home</div>
@@ -83,167 +84,297 @@
       <img src="icons/library.svg" alt="">
       <div>Library</div>
     </div>
-  </div>
+  </nav>
 
-  <div class="video-grid">
+  <main>
+    <section class="video-grid">
 
-    <div class="video-preview">
+      <div class="video-preview">
 
-      <div class="thumbnail-row">
-        <img class="thumbnail" src="thumbnails/thumbnail-1.webp" alt="">
-        <div class="video-time">
-          14:20
+        <div class="thumbnail-row">
+          <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <img class="thumbnail" src="thumbnails/thumbnail-1.webp" alt="">
+          </a>
+          <div class="video-time">
+            14:20
+          </div>
         </div>
-      </div>
-  
-      <div class="video-info-grid">
-  
-        <div class="channel-picture">
-          <img class="profile-picture" src="channel-pictures/channel-1.jpeg" alt="">
-        </div>
-  
-        <div class="video-info">
-          <p class="video-title">
-            Talking Tech and AI with Google CEO Sundar Pichai!</p>
-          <p class="video-author">
-            Marques Brownlee</p>
-          <p class="video-stats">
-            3.4M views &#183; 6 months ago</p>
-        </div>
-  
-      </div>
-    </div>
-  
-    <div class="video-preview">
-  
-      <div class="thumbnail-row">
-        <img class="thumbnail" src="thumbnails/thumbnail-2.webp" alt="">
-        <div class="video-time">
-          8:22
-        </div>
-      </div>
-  
-      <div class="video-info-grid">
-  
-        <div class="channel-picture">
-          <img class="profile-picture" src="channel-pictures/channel-2.jpeg" alt="">
-        </div>
-  
-        <div class="video-info">
-          <p class="video-title">
-            Try Not To Laugh Challenge #9</p>
-          <p class="video-author">
-            Markiplier</p>
-          <p class="video-stats">
-            19M views &#183; 4 years ago</p>
-        </div>
-  
-      </div>
-    </div>
-  
-    <div class="video-preview">
-  
-      <div class="thumbnail-row">
-        <img class="thumbnail" src="thumbnails/thumbnail-3.webp" alt="">
-        <div class="video-time">
-          9:13
-        </div>
-      </div>
-  
-      <div class="video-info-grid">
-  
-        <div class="channel-picture">
-          <img class="profile-picture" src="channel-pictures/channel-3.jpeg" alt="">
-        </div>
-  
-        <div class="video-info">
-          <p class="video-title">
-            Crazy Tik Toks Taken Moments Before DISASTER</p>
-          <p class="video-author">SSSniper Wolf</p>
-          <p class="video-stats">12M views &#183; 1 year ago</p>
-        </div>
-  
-      </div>
-    </div>
-  
-    <div class="video-preview">
-  
-      <div class="thumbnail-row">
-        <img class="thumbnail" src="thumbnails/thumbnail-4.webp" alt="">
-        <div class="video-time">
-          22:09
-        </div>
-      </div>
-  
-      <div class="video-info-grid">
-  
-        <div class="channel-picture">
-          <img class="profile-picture" src="channel-pictures/channel-4.jpeg" alt="">
-        </div>
-  
-        <div class="video-info">
-          <p class="video-title">
-            The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
-          <p class="video-author">Veritasium</p>
-          <p class="video-stats">18M views &#183; 4 months ago</p>
-        </div>
-  
-      </div>
-    </div>
-  
-    <div class="video-preview">
-  
-      <div class="thumbnail-row">
-        <img class="thumbnail" src="thumbnails/thumbnail-5.webp" alt="">
-        <div class="video-time">
-          11:17
-        </div>
-      </div>
-  
-      <div class="video-info-grid">
-  
-        <div class="channel-picture">
-          <img class="profile-picture" src="channel-pictures/channel-5.jpeg" alt="">
-        </div>
-  
-        <div class="video-info">
-          <p class="video-title">
-            Kadane's Algorithm to Maximum Sum Subarray Problem</p>
-          <p class="video-author">
-            CS Dojo</p>
-          <p class="video-stats">
-            519k views &#183; 5 years ago</p>
-        </div>
-  
-      </div>
-    </div>
-  
-    <div class="video-preview">
-  
-      <div class="thumbnail-row">
-        <img class="thumbnail" src="thumbnails/thumbnail-6.webp" alt="">
-        <div class="video-time">
-          19:15
-        </div>
-      </div>
-  
-      <div class="video-info-grid">
-  
-        <div class="channel-picture">
-          <img class="profile-picture" src="channel-pictures/channel-6.jpeg" alt="">
-        </div>
-  
-        <div class="video-info">
-          <p class="video-title">
-            Anything You Can Fit In The Circle I&#39;ll Pay For</p>
-          <p class="video-author">
-            MrBeast</p>
-          <p class="video-stats">
-            141M views &#183; 1 years ago</p>
-        </div>
-      </div>
-    </div>
-  </div>
 
+        <div class="video-info-grid">
+
+          <div class="channel-picture">
+            <a href="https://www.youtube.com/c/mkbhd">
+              <img class="profile-picture" src="channel-pictures/channel-1.jpeg" alt="">
+            </a>
+          </div>
+
+          <div class="video-info">
+            <p class="video-title">
+              <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+                Talking Tech and AI with Google CEO Sundar Pichai!
+              </a>
+            </p>
+            <p class="video-author">
+              Marques Brownlee
+            </p>
+            <p class="video-stats">
+              3.4M views &#183; 6 months ago
+            </p>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="video-preview">
+
+        <div class="thumbnail-row">
+          <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk">
+            <img class="thumbnail" src="thumbnails/thumbnail-2.webp" alt="">
+          </a>
+          <div class="video-time">
+            8:22
+          </div>
+        </div>
+
+        <div class="video-info-grid">
+
+          <div class="channel-picture">
+            <a href="https://www.youtube.com/c/markiplier">
+              <img class="profile-picture" src="channel-pictures/channel-2.jpeg" alt="">
+            </a>
+          </div>
+
+          <div class="video-info">
+            <p class="video-title">
+              <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk">
+                Try Not To Laugh Challenge #9
+              </a>
+            </p>
+            <p class="video-author">
+              Markiplier
+            </p>
+            <p class="video-stats">
+              19M views &#183; 4 years ago
+            </p>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="video-preview">
+
+        <div class="thumbnail-row">
+          <a href="https://www.youtube.com/watch?v=FgjPQQeTh1w">
+            <img class="thumbnail" src="thumbnails/thumbnail-3.webp" alt="">
+          </a>
+          <div class="video-time">
+            9:13
+          </div>
+        </div>
+
+        <div class="video-info-grid">
+
+          <div class="channel-picture">
+            <a href="https://www.youtube.com/user/SSSniperWolf">
+              <img class="profile-picture" src="channel-pictures/channel-3.jpeg" alt="">
+            </a>
+          </div>
+
+          <div class="video-info">
+            <p class="video-title">
+              <a href="https://www.youtube.com/watch?v=FgjPQQeTh1w">
+                Crazy Tik Toks Taken Moments Before DISASTER
+              </a>
+            </p>
+            <p class="video-author">
+              SSSniper Wolf
+            </p>
+            <p class="video-stats">
+              12M views &#183; 1 year ago
+            </p>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="video-preview">
+
+        <div class="thumbnail-row">
+          <a href="https://www.youtube.com/watch?v=094y1Z2wpJg">
+            <img class="thumbnail" src="thumbnails/thumbnail-4.webp" alt="">
+          </a>
+          <div class="video-time">
+            22:09
+          </div>
+        </div>
+
+        <div class="video-info-grid">
+
+          <div class="channel-picture">
+            <a href="https://www.youtube.com/c/veritasium">
+              <img class="profile-picture" src="channel-pictures/channel-4.jpeg" alt="">
+            </a>
+          </div>
+
+          <div class="video-info">
+            <p class="video-title">
+              <a href="https://www.youtube.com/watch?v=094y1Z2wpJg">
+                The Simplest Math Problem No One Can Solve - Collatz Conjecture
+              </a>
+            </p>
+            <p class="video-author">
+              Veritasium
+            </p>
+            <p class="video-stats">
+              18M views &#183; 4 months ago
+            </p>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="video-preview">
+
+        <div class="thumbnail-row">
+          <a href="https://www.youtube.com/watch?v=86CQq3pKSUw">
+            <img class="thumbnail" src="thumbnails/thumbnail-5.webp" alt="">
+          </a>
+          <div class="video-time">
+            11:17
+          </div>
+        </div>
+
+        <div class="video-info-grid">
+
+          <div class="channel-picture">
+            <a href="https://www.youtube.com/c/CSDojo">
+              <img class="profile-picture" src="channel-pictures/channel-5.jpeg" alt="">
+            </a>
+          </div>
+
+          <div class="video-info">
+            <p class="video-title">
+              <a href="https://www.youtube.com/watch?v=86CQq3pKSUw">
+                Kadane's Algorithm to Maximum Sum Subarray Problem
+              </a>
+            </p>
+            <p class="video-author">
+              CS Dojo
+            </p>
+            <p class="video-stats">
+              519k views &#183; 5 years ago
+            </p>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="video-preview">
+
+        <div class="thumbnail-row">
+          <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg">
+            <img class="thumbnail" src="thumbnails/thumbnail-6.webp" alt="">
+          </a>
+          <div class="video-time">
+            19:15
+          </div>
+        </div>
+
+        <div class="video-info-grid">
+
+          <div class="channel-picture">
+            <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
+              <img class="profile-picture" src="channel-pictures/channel-6.jpeg" alt="">
+            </a>
+          </div>
+
+          <div class="video-info">
+            <p class="video-title">
+              <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg">
+                Anything You Can Fit In The Circle I&#39;ll Pay For
+              </a>
+            </p>
+            <p class="video-author">
+              MrBeast
+            </p>
+            <p class="video-stats">
+              141M views &#183; 1 years ago
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+
+        <div class="thumbnail-row">
+          <a href="https://www.youtube.com/watch?v=fNVa1qMbF9Y">
+            <img class="thumbnail" src="thumbnails/thumbnail-7.webp" alt="">
+          </a>
+          <div class="video-time">
+            10:13
+          </div>
+        </div>
+
+        <div class="video-info-grid">
+
+          <div class="channel-picture">
+            <a href="https://www.youtube.com/channel/UCP5tjEmvPItGyLhmjdwP7Ww">
+              <img class="profile-picture" src="channel-pictures/channel-7.jpeg" alt="">
+            </a>
+          </div>
+
+          <div class="video-info">
+            <p class="video-title">
+              <a href="https://www.youtube.com/watch?v=fNVa1qMbF9Y">
+                Why Planes Don't Fly Over Tibet
+              </a>
+            </p>
+            <p class="video-author">
+              RealLifeLore
+            </p>
+            <p class="video-stats">
+              6.6M views &#183; 1 years ago
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+
+        <div class="thumbnail-row">
+          <a href="https://www.youtube.com/watch?v=lFm4EM1juls">
+            <img class="thumbnail" src="thumbnails/thumbnail-8.webp" alt="">
+          </a>
+          <div class="video-time">
+            7:12
+          </div>
+        </div>
+
+        <div class="video-info-grid">
+
+          <div class="channel-picture">
+            <a href="https://www.youtube.com/channel/UCHAK6CyegY22Zj2GWrcaIxg">
+              <img class="profile-picture" src="channel-pictures/channel-8.jpeg" alt="">
+            </a>
+          </div>
+
+          <div class="video-info">
+            <p class="video-title">
+              <a href="https://www.youtube.com/watch?v=lFm4EM1juls">
+                Anything You Can Fit In The Circle I&#39;ll Pay For
+              </a>
+            </p>
+            <p class="video-author">
+              TechVision
+            </p>
+            <p class="video-stats">
+              3.7M views &#183; 10 months ago
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
+
 </html>
