--- a/html-css-practice/linkedin/index.html
+++ b/html-css-practice/linkedin/index.html
@@ -15,10 +15,47 @@
         }
 
         .right-side {
-            height: 500px;
+            height: 350px;
             width: 300px;
             background-color: white;
+
+            border-radius: 10px;
         }
+        .right-side-head {
+            display: flex;
+            flex: 1;
+            align-items: center;
+            justify-content: space-between;
+
+            margin-left: 10px;
+            margin-right: 10px;
+            margin-top: 15px;
+        }
+        .linkedin-news {
+            font-size: 15px;
+            display: flex;
+            flex-direction: column;
+            cursor: pointer;
+        }
+        .linkedin-news div {
+            margin-bottom: 10px;
+            line-height: 20px;
+        }
+        /*TODO: da aggiustare l hover, non va sull intera sezione ma solo sul li*/
+        .linkedin-news div:hover {
+            background-color: lightgray;
+            position: relative;
+
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+        }
+        .linkedin-news span {
+            font-size: 12px;
+            color: rgb(160, 160, 160);
+        }
+
     </style>
 </head>
 
@@ -179,7 +216,55 @@
         </div>
 
         <div class="right-side">
-            Gian puzza
+            <div class="right-side-head">
+                <div>
+                    Linkedin Notizie
+                </div>
+                <img src="icons/info.svg" alt="">
+            </div>
+
+            <ul class="linkedin-news">
+                <div>
+                    <li>
+                        Che cosa succede a COP28
+                    </li>
+                    <span>
+                        Notizie principali - 990 lettori
+                    </span>
+                </div>
+                <div>
+                    <li>
+                        Cercare lavoro da senior
+                    </li>
+                    <span>
+                        5 giorni fa - 648 lettori
+                    </span>
+                </div>
+                <div>
+                    <li>
+                        A proposito di talenti e reputazione
+                    </li>
+                    <span>
+                        6 giorni fa - 182 lettori
+                    </span>
+                </div>
+                <div>
+                    <li>
+                        Nel 2023 meno investimenti nel digit...
+                    </li>
+                    <span>
+                        8 ore fa
+                    </span>
+                </div>
+                <div>
+                    <li>
+                        Più professionisti senza Ordini
+                    </li>
+                    <span>
+                        4 giorni fa
+                    </span>
+                </div>
+            </ul>
         </div>
     </div>
 </body>
