--- a/html-css-practice/linkedin/index.html
+++ b/html-css-practice/linkedin/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style/general.css">
     <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/sidebar-left.css">
+    <link rel="stylesheet" href="style/sidebar-right.css">
     <link rel="stylesheet" href="style/main-head.css">
 
     <style>
@@ -13,49 +14,6 @@
             background-color: white;
             height: 700px;
         }
-
-        .right-side {
-            height: 350px;
-            width: 300px;
-            background-color: white;
-
-            border-radius: 10px;
-        }
-        .right-side-head {
-            display: flex;
-            flex: 1;
-            align-items: center;
-            justify-content: space-between;
-
-            margin-left: 10px;
-            margin-right: 10px;
-            margin-top: 15px;
-        }
-        .linkedin-news {
-            font-size: 15px;
-            display: flex;
-            flex-direction: column;
-            cursor: pointer;
-        }
-        .linkedin-news div {
-            margin-bottom: 10px;
-            line-height: 20px;
-        }
-        /*TODO: da aggiustare l hover, non va sull intera sezione ma solo sul li*/
-        .linkedin-news div:hover {
-            background-color: lightgray;
-            position: relative;
-
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-        }
-        .linkedin-news span {
-            font-size: 12px;
-            color: rgb(160, 160, 160);
-        }
-
     </style>
 </head>
 
@@ -222,7 +180,6 @@
                 </div>
                 <img src="icons/info.svg" alt="">
             </div>
-
             <ul class="linkedin-news">
                 <div>
                     <li>
