refactoring photos folders

--- a/html-css-practice/image-gallery/image-grid-flex/my-grid/index.html
+++ b/html-css-practice/image-gallery/image-grid-flex/my-grid/index.html
@@ -15,37 +15,37 @@
             <div class="column">
 
                 <div class="photo">
-                    <img src="photos/puppy-kira.jpg" alt="">
+                    <img src="../../photos/puppy-kira.jpg" alt="">
                 </div>
                 <div class="photo">
-                    <img src="photos/puppy-kira1.jpg" alt="">
+                    <img src="../../photos/puppy-kira1.jpg" alt="">
                 </div>
                 <div class="photo">
-                    <img src="photos/kira3.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="column">
-                <div class="photo">
-                    <img src="photos/kira4.jpg" alt="">
-                </div>
-                <div class="photo">
-                    <img src="photos/kira5.jpg" alt="">
-                </div>
-                <div class="photo">
-                    <img src="photos/kira6.jpg" alt="">
+                    <img src="../../photos/kira3.jpg" alt="">
                 </div>
             </div>
 
             <div class="column">
                 <div class="photo">
-                    <img src="photos/kira1.jpg" alt="">
+                    <img src="../../photos/kira4.jpg" alt="">
                 </div>
                 <div class="photo">
-                    <img src="photos/kira2.jpg" alt="">
+                    <img src="../../photos/kira5.jpg" alt="">
                 </div>
                 <div class="photo">
-                    <img src="photos/puppy-kira2.jpg" alt="">
+                    <img src="../../photos/kira6.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="column">
+                <div class="photo">
+                    <img src="../../photos/kira1.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="../../photos/kira2.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="../../photos/puppy-kira2.jpg" alt="">
                 </div>
             </div>
 
