changed name to my gallery. new folder images for practice

--- a/html-css-practice/image-gallery/image-grid-flex/kira-gallery-grid/index.html
+++ b/html-css-practice/image-gallery/image-grid-flex/kira-gallery-grid/index.html
@@ -8,7 +8,9 @@
 
 <body>
     <div class="container">
-        <h2 class="title">Responsive image grid</h2>
+        <h2 class="title">
+            Galleria <span>Kira</span>
+        </h2>
 
         <div class="photo-gallery">
             
