fix path kira pics folder

--- a/html-css-practice/image-gallery/image-grid-flex/kira-gallery-grid/index.html
+++ b/html-css-practice/image-gallery/image-grid-flex/kira-gallery-grid/index.html
@@ -17,37 +17,37 @@
             <div class="column">
 
                 <div class="photo">
-                    <img src="../../photos/puppy-kira.jpg" alt="">
+                    <img src="../../kira-photos/puppy-kira.jpg" alt="">
                 </div>
                 <div class="photo">
-                    <img src="../../photos/puppy-kira1.jpg" alt="">
+                    <img src="../../kira-photos/puppy-kira1.jpg" alt="">
                 </div>
                 <div class="photo">
-                    <img src="../../photos/kira3.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="column">
-                <div class="photo">
-                    <img src="../../photos/kira4.jpg" alt="">
-                </div>
-                <div class="photo">
-                    <img src="../../photos/kira5.jpg" alt="">
-                </div>
-                <div class="photo">
-                    <img src="../../photos/kira6.jpg" alt="">
+                    <img src="../../kira-photos/kira3.jpg" alt="">
                 </div>
             </div>
 
             <div class="column">
                 <div class="photo">
-                    <img src="../../photos/kira1.jpg" alt="">
+                    <img src="../../kira-photos/kira4.jpg" alt="">
                 </div>
                 <div class="photo">
-                    <img src="../../photos/kira2.jpg" alt="">
+                    <img src="../../kira-photos/kira5.jpg" alt="">
                 </div>
                 <div class="photo">
-                    <img src="../../photos/puppy-kira2.jpg" alt="">
+                    <img src="../../kira-photos/kira6.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="column">
+                <div class="photo">
+                    <img src="../../kira-photos/kira1.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="../../kira-photos/kira2.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="../../kira-photos/puppy-kira2.jpg" alt="">
                 </div>
             </div>
 
