new button navbar, new font size and margin on init description

--- a/html-css-practice/samples/non-profit org/index.html
+++ b/html-css-practice/samples/non-profit org/index.html
@@ -34,6 +34,7 @@
                         <li><a href="">Donations</a></li>
                         <li><a href="">Languages</a></li>
                     </ul>
+                    <button>Donate</button>
                 </nav>
     
                 <div class="description">
