--- a/html-css-practice/samples/non-profit org/index.html
+++ b/html-css-practice/samples/non-profit org/index.html
@@ -24,7 +24,7 @@
             <div class="container-absolute">
                 <nav>
                     <img class="logo-nav" src="img/logo/cropped-make-a-difference_LOGO.png" alt="">
-    
+
                     <ul>
                         <li><a href="">About</a></li>
                         <li><a href="">The Learning Hub</a></li>
@@ -36,7 +36,7 @@
                     </ul>
                     <button>Donate</button>
                 </nav>
-    
+
                 <div class="description">
                     <h3>Education for change</h3>
                     <img src="img/images/user-graduate-white.svg" alt="">
@@ -45,6 +45,52 @@
             </div>
         </div>
     </section>
+
+    <section>
+        <div class="video-container">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/A8tH2vjo43E?si=bcmj919J4_zZmiOi"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+    </section>
+
+    <section>
+        <div class="more-description-container">
+
+            <div class="svg-container">
+                <svg class="sun-shine" xmlns="http://www.w3.org/2000/svg" height="16" width="16"
+                    viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                    <path
+                        d="M361.5 1.2c5 2.1 8.6 6.6 9.6 11.9L391 121l107.9 19.8c5.3 1 9.8 4.6 11.9 9.6s1.5 10.7-1.6 15.2L446.9 256l62.3 90.3c3.1 4.5 3.7 10.2 1.6 15.2s-6.6 8.6-11.9 9.6L391 391 371.1 498.9c-1 5.3-4.6 9.8-9.6 11.9s-10.7 1.5-15.2-1.6L256 446.9l-90.3 62.3c-4.5 3.1-10.2 3.7-15.2 1.6s-8.6-6.6-9.6-11.9L121 391 13.1 371.1c-5.3-1-9.8-4.6-11.9-9.6s-1.5-10.7 1.6-15.2L65.1 256 2.8 165.7c-3.1-4.5-3.7-10.2-1.6-15.2s6.6-8.6 11.9-9.6L121 121 140.9 13.1c1-5.3 4.6-9.8 9.6-11.9s10.7-1.5 15.2 1.6L256 65.1 346.3 2.8c4.5-3.1 10.2-3.7 15.2-1.6zM160 256a96 96 0 1 1 192 0 96 96 0 1 1 -192 0zm224 0a128 128 0 1 0 -256 0 128 128 0 1 0 256 0z" />
+                </svg>
+            </div>
+
+            <div class="paragraph-container">
+                <p class="who-we-are">
+                    Make a Difference Onlus is a non-profit organization founded in 2008 by the Chilver and Paloschi
+                    families, with the aim of supporting the education of unprivileged children living on the Eastern
+                    Coast
+                    of Kenya.
+                </p>
+            </div>
+
+            <div class="svg-container">
+                <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16"
+                    viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                    <path
+                        d="M367.9 329.8c-4.6 5.3-9.8 10.1-15.9 13.7v22.9c66.5 9.3 112 28.1 112 49.7 0 30.9-93.1 56-208 56S48 446.9 48 416c0-21.6 45.5-40.3 112-49.7v-22.9c-6.1-3.6-11.3-8.4-15.9-13.7C58.9 345.3 0 378.1 0 416c0 53 114.6 96 256 96s256-43 256-96c0-38-58.9-70.7-144.1-86.2zM256 128c35.4 0 64-28.7 64-64S291.4 0 256 0s-64 28.7-64 64 28.7 64 64 64zm-64 192v96c0 17.7 14.3 32 32 32h64c17.7 0 32-14.3 32-32v-96c17.7 0 32-14.3 32-32v-96c0-26.5-21.5-48-48-48h-11.8c-11.1 5-23.3 8-36.2 8s-25.1-3-36.2-8H208c-26.5 0-48 21.5-48 48v96c0 17.7 14.3 32 32 32z" />
+                </svg>
+            </div>
+
+            <button class="who-we-are-btn">
+                MORE ON WHO WE ARE
+            </button>
+
+            <hr class="divider">
+        </div>
+    </section>
+
 </body>
 
 </html>
