--- a/html-css-practice/samples/non-profit org/index.html
+++ b/html-css-practice/samples/non-profit org/index.html
@@ -15,7 +15,7 @@
     <header>
     </header>
 
-    <section>
+    <section class="initial-section">
         <!--intro-background-section-->
         <div class="init-container">
 
@@ -46,7 +46,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="video-section">
         <div class="video-container">
             <iframe width="100%" height="100%" src="https://www.youtube.com/embed/A8tH2vjo43E?si=bcmj919J4_zZmiOi"
                 title="YouTube video player" frameborder="0"
@@ -56,7 +56,7 @@
     </section>
 
     <section>
-        <div class="more-description-container">
+        <div class="info-container">
 
             <div class="svg-container">
                 <svg class="sun-shine" xmlns="http://www.w3.org/2000/svg" height="16" width="16"
@@ -91,6 +91,54 @@
         </div>
     </section>
 
+    <section>
+        <div class="info-container">
+
+            <div class="svg-container">
+                <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16"
+                    viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                    <path
+                        d="M225.8 468.2l-2.5-2.3L48.1 303.2C17.4 274.7 0 234.7 0 192.8v-3.3c0-70.4 50-130.8 119.2-144C158.6 37.9 198.9 47 231 69.6c9 6.4 17.4 13.8 25 22.3c4.2-4.8 8.7-9.2 13.5-13.3c3.7-3.2 7.5-6.2 11.5-9c0 0 0 0 0 0C313.1 47 353.4 37.9 392.8 45.4C462 58.6 512 119.1 512 189.5v3.3c0 41.9-17.4 81.9-48.1 110.4L288.7 465.9l-2.5 2.3c-8.2 7.6-19 11.9-30.2 11.9s-22-4.2-30.2-11.9zM239.1 145c-.4-.3-.7-.7-1-1.1l-17.8-20c0 0-.1-.1-.1-.1c0 0 0 0 0 0c-23.1-25.9-58-37.7-92-31.2C81.6 101.5 48 142.1 48 189.5v3.3c0 28.5 11.9 55.8 32.8 75.2L256 430.7 431.2 268c20.9-19.4 32.8-46.7 32.8-75.2v-3.3c0-47.3-33.6-88-80.1-96.9c-34-6.5-69 5.4-92 31.2c0 0 0 0-.1 .1s0 0-.1 .1l-17.8 20c-.3 .4-.7 .7-1 1.1c-4.5 4.5-10.6 7-16.9 7s-12.4-2.5-16.9-7z" />
+                </svg>
+            </div>
+
+            <div class="paragraph-container">
+                <h3>Help Us Obtain our Objective</h3>
+
+                <p>
+                    Over the years, our association has focused on supporting the education of <b>over 1000 children</b>
+                    in
+                    Kenya. The intent is to increase the children's level of education and to introduce new students
+                    each year into the program.
+                </p>
+            </div>
+
+            <hr class="divider">
+        </div>
+    </section>
+
+    <section>
+        <div class="info-container">
+
+            <div class="svg-container">
+                <svg xmlns="http://www.w3.org/2000/svg" height="16" width="18"
+                    viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                    <path
+                        d="M552 64H112c-20.9 0-38.6 13.4-45.2 32H24c-13.3 0-24 10.7-24 24v272c0 30.9 25.1 56 56 56h496c13.3 0 24-10.7 24-24V88c0-13.3-10.7-24-24-24zM48 392V144h16v248c0 4.4-3.6 8-8 8s-8-3.6-8-8zm480 8H111.4c.4-2.6 .6-5.3 .6-8V112h416v288zM172 280h136c6.6 0 12-5.4 12-12v-96c0-6.6-5.4-12-12-12H172c-6.6 0-12 5.4-12 12v96c0 6.6 5.4 12 12 12zm28-80h80v40h-80v-40zm-40 140v-24c0-6.6 5.4-12 12-12h136c6.6 0 12 5.4 12 12v24c0 6.6-5.4 12-12 12H172c-6.6 0-12-5.4-12-12zm192 0v-24c0-6.6 5.4-12 12-12h104c6.6 0 12 5.4 12 12v24c0 6.6-5.4 12-12 12H364c-6.6 0-12-5.4-12-12zm0-144v-24c0-6.6 5.4-12 12-12h104c6.6 0 12 5.4 12 12v24c0 6.6-5.4 12-12 12H364c-6.6 0-12-5.4-12-12zm0 72v-24c0-6.6 5.4-12 12-12h104c6.6 0 12 5.4 12 12v24c0 6.6-5.4 12-12 12H364c-6.6 0-12-5.4-12-12z" />
+                </svg>
+            </div>
+
+            <div class="paragraph-container">
+                <h3>Latest News</h3>
+            </div>
+
+            <div class="news-container">
+                
+            </div>
+
+            <hr class="divider">
+        </div>
+    </section>
 </body>
 
 </html>
