new article section with img & style

--- a/html-css-practice/samples/non-profit org/index.html
+++ b/html-css-practice/samples/non-profit org/index.html
@@ -133,7 +133,83 @@
             </div>
 
             <div class="news-container">
-                
+                <article class="article-container">
+                    <div class="image-preview">
+                        <img src="img/images/articles/n7LzxyQLFVE-SD.jpg" alt="">
+                    </div>
+
+                    <div class="article-content">
+                        <h4>Artificial Intelligence NEWS</h4>
+
+                        <p>
+                            The school is leveraging artificial intelligence to provide its students with personalized
+                            education. through an online learning platform known as Century Tech.
+                        </p>
+
+                        <a href="" target="_blank">
+                            <span>READ MORE</span>
+                        </a>
+                    </div>
+
+                    <footer class="article-footer">
+                        <hr class="footer-divider">
+
+                        <div class="publish-date">
+                            December 15 2023 - No Comments
+                        </div>
+                    </footer>
+                </article>
+
+                <article class="article-container">
+                    <div class="image-preview">
+                        <img src="img/images/articles/DSC_9504-1536x1024.jpg" alt="">
+                    </div>
+                    <div class="article-content">
+                        <h4>PP2 Graduation Ceremony 2023</h4>
+
+                        <p>
+                            Congratulations to the classes of 2022-2023
+                        </p>
+
+                        <a href="" target="_blank">
+                            <span>READ MORE</span>
+                        </a>
+
+                    </div>
+                    <footer class="article-footer">
+                        <hr class="footer-divider">
+
+                        <div class="publish-date">
+                            December 13 2023 - No Comments
+                        </div>
+                    </footer>
+                </article>
+
+                <article class="article-container">
+                    <div class="image-preview">
+                        <img src="img/images/articles/IMG_8795-1152x1536.jpg" alt="">
+                    </div>
+                    <div class="article-content">
+                        <h4>Eco-School Project</h4>
+
+                        <p>
+                            The school is leveraging artificial intelligence to provide its students with personalized
+                            education. through an online learning platform known as Century Tech.
+                        </p>
+
+                        <a href="" target="_blank">
+                            <span>READ MORE</span>
+                        </a>
+
+                    </div>
+                    <footer class="article-footer">
+                        <hr class="footer-divider">
+
+                        <div class="publish-date">
+                            October 5 2023 - No Comments
+                        </div>
+                    </footer>
+                </article>
             </div>
 
             <hr class="divider">
