--- a/html-css-practice/samples/non-profit org/index.html
+++ b/html-css-practice/samples/non-profit org/index.html
@@ -246,9 +246,41 @@
                     DISCOVER OUR PROJECTS
                 </button>
             </div>
-            
+
             <hr class="divider">
         </div>
+    </section>
+
+    <section>
+        <div class="learning-hub-container">
+            <div class="background-image-learning-hub">
+                <img src="img/learning-hub/IMG_3305-scaled.jpeg" alt="">
+            </div>
+
+            <div class="info">
+                <h4>The Learning Hub</h4>
+
+                <p>
+                    We bought 2.5 acres of land, planted over 100 native trees, drilled two water wells and finally
+                    built a school of excellence for children from 3 to 12
+                </p>
+
+                <button>Learn More</button>
+            </div>
+
+            <hr class="divider">
+        </div>
+    </section>
+
+    <section>
+        <div class="location-icon-container">
+            <svg xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                <path
+                    d="M505 442.7l-99.7-99.7c-4.5-4.5-10.6-7-17-7h-16.3c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6 .1-34zm-297-90.7c-79.5 0-144-64.3-144-144 0-79.5 64.4-144 144-144 79.5 0 144 64.3 144 144 0 79.5-64.4 144-144 144zm0-240c-40.8 0-73.8 33.1-73.8 73.8 0 33 48.3 93.1 66.8 114.9a9.2 9.2 0 0 0 14.2 0c18.5-21.8 66.8-81.9 66.8-114.9 0-40.8-33.1-73.8-73.8-73.8zm0 96c-13.3 0-24-10.8-24-24 0-13.3 10.8-24 24-24s24 10.7 24 24c0 13.3-10.8 24-24 24z" />
+            </svg>
+        </div>
+        
     </section>
 </body>
 
