initial contact us section

--- a/html-css-practice/samples/non-profit org/index.html
+++ b/html-css-practice/samples/non-profit org/index.html
@@ -279,8 +279,65 @@
                 <path
                     d="M505 442.7l-99.7-99.7c-4.5-4.5-10.6-7-17-7h-16.3c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6 .1-34zm-297-90.7c-79.5 0-144-64.3-144-144 0-79.5 64.4-144 144-144 79.5 0 144 64.3 144 144 0 79.5-64.4 144-144 144zm0-240c-40.8 0-73.8 33.1-73.8 73.8 0 33 48.3 93.1 66.8 114.9a9.2 9.2 0 0 0 14.2 0c18.5-21.8 66.8-81.9 66.8-114.9 0-40.8-33.1-73.8-73.8-73.8zm0 96c-13.3 0-24-10.8-24-24 0-13.3 10.8-24 24-24s24 10.7 24 24c0 13.3-10.8 24-24 24z" />
             </svg>
+            <h3>
+                Our locations
+            </h3>
         </div>
         
+        <div class="maps"></div>
+
+        <div class="contact-us">
+            <h3>
+                Contact Us!
+            </h3>
+
+            <div class="infoes">
+                <div class="info-location">
+                    <div class="onlus">
+                        <img src="" alt="">
+                        <p>
+                            Make a Difference ONLUS
+                        </p>
+                    </div>
+                    <div class="address">
+                        <img src="" alt="">
+                        <p>
+                            Via Val Cismon, 9 - 20126 Milano Italy
+                        </p>
+                    </div>
+                    <div class="phone">
+                        <img src="" alt="">
+                        <p>
+                            Tel - 02 66116379
+                        </p>
+                    </div>
+                </div>
+                
+                <div class="send-us-mail">
+                    <div class="name">
+                        <span>
+                            Name
+                        </span>
+                        <input type="text" placeholder="Name">
+                    </div>
+                    <div class="email">
+                        <span>
+                            Email
+                        </span>
+                        <input type="text" placeholder="Email">
+                    </div>
+                    <div class="message">
+                        <span>
+                            Message
+                        </span>
+                        <input type="text" placeholder="Message">
+                        <button class="send-btn">
+                            SEND
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
