init "donate us" section

--- a/html-css-practice/samples/non-profit org/index.html
+++ b/html-css-practice/samples/non-profit org/index.html
@@ -283,7 +283,7 @@
                 Our locations
             </h3>
         </div>
-        
+
         <div class="maps"></div>
 
         <div class="contact-us">
@@ -312,7 +312,7 @@
                         </p>
                     </div>
                 </div>
-                
+
                 <div class="send-us-mail">
                     <div class="name">
                         <span>
@@ -334,6 +334,50 @@
                         <button class="send-btn">
                             SEND
                         </button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <hr class="divider">
+    </section>
+
+    <section>
+        <div class="donate-container">
+            <div class="button-container">
+                <button class="donate-btn">
+                    DONATE NOW
+                </button>
+            </div>
+
+            <div class="make-a-difference-container">
+                <div class="left-side">
+                    <div class="image-container">
+                        <img src="img/images/IMG_3076-2048x1536.jpg" alt="">
+                    </div>
+
+                    <h5>
+                        You can make a difference today!
+                    </h5>
+
+                    <br>
+
+                    <p>
+                        All children deserve to have an eductaion.
+                    </p>
+
+                    <br>
+
+                    <p>
+                        C.F. 97501690156 5xMille. All the contributions are tax deductible. No good or services will be
+                        provided in exchange for the contribution
+                    </p>
+                </div>
+
+                <div class="right-side">
+                    <div class="header-right-side">
+                        <span>Scegli un importo</span>
                     </div>
                 </div>
             </div>
