--- a/html-css-practice/samples/non-profit org/index.html
+++ b/html-css-practice/samples/non-profit org/index.html
@@ -418,7 +418,7 @@
                     <br>
 
                     <p>
-                        All children deserve to have an eductaion.
+                        All children deserve to have an education.
                     </p>
 
                     <br>
@@ -432,6 +432,35 @@
                 <div class="right-side">
                     <div class="header-right-side">
                         <span>Scegli un importo</span>
+                    </div>
+
+                    <div class="donation-plans">
+                        <div class="tantum">
+                            <span>Una tantum</span>
+                        </div>
+                        <div class="monthly">
+                            <span>Mensile</span>
+                        </div>
+                        <div class="annual">
+                            <span>Annuale</span>
+                        </div>
+                    </div>
+                    <div class="select-import-container">
+                        <div class="import">
+                            <p>300 €</p>
+                            <span>1 Year Scholarship</span>
+                        </div>
+                        <!-- <div class="import">
+                            <p>45 €</p>
+                            <span>Exercise and Text Books</span>
+                        </div>
+                        <div class="import">
+                            <p>15 €</p>
+                            <span>School Uniform</span>
+                        </div>
+                        <div class="import">
+                            <p>Importo personalizzato</p>
+                        </div> -->
                     </div>
                 </div>
             </div>
