more exercise/challenge on js course

--- a/js-course/lessons/lesson 5/exercises/5k.html
+++ b/js-course/lessons/lesson 5/exercises/5k.html
@@ -17,49 +17,49 @@
   </button>
 
   <button onclick="
-    cartQuantity--
+    cartQuantity--;
     console.log(`Cart quantity: ${cartQuantity}`);
   ">
     Remove from Cart
   </button>
 
   <button onclick="
-    cartQuantity -= 2
+    cartQuantity -= 2;
     console.log(`Cart quantity: ${cartQuantity}`);
   ">
     &#45;2
   </button>
 
   <button onclick="
-    cartQuantity -= 2
+    cartQuantity -= 3;
     console.log(`Cart quantity: ${cartQuantity}`);
   ">
     &#45;3
   </button>
 
   <button onclick="
-    cartQuantity++
+    cartQuantity++;
     console.log(`Cart quantity: ${cartQuantity}`);
   ">
     Add to Cart
   </button>
 
   <button onclick="
-    cartQuantity += 2
+    cartQuantity += 2;
     console.log(`Cart quantity: ${cartQuantity}`);
   ">
     &#43;2
   </button>
 
   <button onclick="
-    cartQuantity += 3
+    cartQuantity += 3;
     console.log(`Cart quantity: ${cartQuantity}`);
   ">
     &#43;3
   </button>
 
   <button onclick="
-    cartQuantity += 4
+    cartQuantity += 4;
     console.log(`Cart quantity: ${cartQuantity}`);
   ">
     &#43;4
@@ -67,7 +67,7 @@
 
 
   <button onclick="
-    cartQuantity += 5
+    cartQuantity += 5;
     console.log(`Cart quantity: ${cartQuantity}`);
   ">
     &#43;5
@@ -76,7 +76,7 @@
 
 
   <button onclick="
-    cartQuantity = 0
+    cartQuantity = 0;
     console.log('Cart was reset.')
     console.log(`Cart quantity: ${cartQuantity}`);
   ">
