--- a/html-css-practice/samples/dangelo/index.html
+++ b/html-css-practice/samples/dangelo/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar-header">
+            <li><a href="">HOME</a></li>
+            
+            <li><a href="">PORTFOLIO</a></li>
+            <li><a href="">ABOUT ME</a></li>
+            <li><a href="">CONTACTS</a></li>
+        </nav>
+    </header>
 </body>
 </html>
