da rifare non mi piaceva

--- a/html-css-practice/samples/dangelo/index.html
+++ b/html-css-practice/samples/dangelo/index.html
@@ -1,43 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alessandro Dangelo</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Dangelo Portfolio</title>
 </head>
-
 <body>
-    <section>
-        <header>
-            <nav class="navbar-header">
-                <li><a href="">HOME</a></li>
-
-                <li><a href="">PORTFOLIO</a></li>
-                <li><a href="">ABOUT ME</a></li>
-                <li><a href="">CONTACTS</a></li>
-            </nav>
-        </header>
-
-        <div class="background-gif">
-            <img src="https://static.wixstatic.com/media/a10aad_42f188dd1ab2434aa6a1458ede74828f~mv2.gif" alt="">
-        </div>
-
-        <div class="bio-wrapper">
-            <h4>
-                GAME DESIGNER
-            </h4>
-            <h1>
-                ALESSANDRO <br>
-                D&#39;ANGELO
-            </h1>
-            <p>
-                &#34;All play means something.&#34;<br>
-                Johan Huizinga, Homo Ludens: A Study of the Play ELement in Culture
-            </p>
-        </div>
-    </section>
+    
 </body>
-
 </html>
