structure html and initial stylying css

--- a/html-css-practice/samples/fox-group/index.html
+++ b/html-css-practice/samples/fox-group/index.html
@@ -4,8 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fox Group srl</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <header> <!--classic navbar fixed top-->
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Team</li>
+                <li>Contacts</li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="home-main"><!--img background and presentation-->
+            <div class="intro">
+                <h1>Fox Group</h1>
+                <p>We take pleasure in serving and satisfying our customers quickly and in innovative ways</p>
+            </div>
+        </section>
+
+        <section class="services"><!--3 cols: design, dev, deploy-->
+            <div class="col">
+                <img src="icons/design.svg" alt="">
+                <h2>Design</h2>
+                <p>Make your projects look great and interact beautifully</p>
+            </div>
+
+            <div class="col">
+                <img src="icons/develop.svg" alt="">
+
+                <h2>Develop</h2>
+                <p>Use modern tools to turn your design into a web site</p>
+            </div>
+            
+            <div class="col">
+                <img src="icons/deploy.svg" alt="">
+
+                <h2>Deploy</h2>
+                <p>Use modern tools to turn your design into a web site</p>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <h4>FoxGroup&#169;</h4>
+    </footer>
 </body>
 </html>
