more styling done

--- a/html-css-practice/samples/fox-group/index.html
+++ b/html-css-practice/samples/fox-group/index.html
@@ -30,8 +30,11 @@
         <section class="services"><!--3 cols: design, dev, deploy-->
             <div class="col">
                 <img src="icons/design.svg" alt="">
+
                 <h2>Design</h2>
                 <p>Make your projects look great and interact beautifully</p>
+                
+                <button>More</button>
             </div>
 
             <div class="col">
@@ -39,6 +42,8 @@
 
                 <h2>Develop</h2>
                 <p>Use modern tools to turn your design into a web site</p>
+
+                <button>More</button>
             </div>
             
             <div class="col">
@@ -46,6 +51,8 @@
 
                 <h2>Deploy</h2>
                 <p>Use modern tools to turn your design into a web site</p>
+
+                <button>More</button>
             </div>
         </section>
     </main>
