home page style done
- todo responsive

--- a/html-css-practice/samples/fox-group/index.html
+++ b/html-css-practice/samples/fox-group/index.html
@@ -22,8 +22,8 @@
     <main>
         <section class="home-main"><!--img background and presentation-->
             <div class="intro">
-                <h1>Fox Group</h1>
-                <p>We take pleasure in serving and satisfying our customers quickly and in innovative ways</p>
+                <h1><span>Fox</span> Group</h1>
+                <p>We take care of our customers</p>
             </div>
         </section>
 
