--- a/html-css-practice/logins/login-sample/next-index.html
+++ b/html-css-practice/logins/login-sample/next-index.html
@@ -26,12 +26,12 @@
 
             <div class="form-side email">
                 <form action="" method="get" class="form-login">
-                    <div class="email">
-                        <input type="email" id="email" name="email" placeholder="Email" required>
+                    <div class="password">
+                        <input type="password" id="password" name="password" placeholder="Password">
                     </div>
                 </form>
 
-                <a href="">Forgot email?</a>
+                <a href="">Forgot password?</a>
 
                 <p>Not your computer? Use Guest mode to sign in privately.<a class="learn-more-link" href="">Learn More</a></p>
 
@@ -40,13 +40,13 @@
                         <a href="">Create account</a>
                     </div>
 
-                    <button id="next" class="next">Next</button>
+                    <button id="sign-in" class="sign-in">Sign In</button>
                 </div>
             </div>
         </div>
 
     </main>
     
-    <script src="main.js"></script>
+    <script src="next-main.js"></script>
 </body>
 </html>
