better responsive layout with different dimensions

--- a/html-css-practice/samples/CvSample/index.html
+++ b/html-css-practice/samples/CvSample/index.html
@@ -42,22 +42,22 @@
 
             <div class="education">
                 <h3>Education</h3>
-                <div class="regional-qualification">
-                    <p>2016</p>
-                    <p>Qualifica professionale di Elettricista di bordo</p>
-                    <p>Aesseffe</p>
+                <div class="software-dev-qualification">
+                    <p>2019</p>
+                    <p>Qualifica di sviluppatore e programmatore .NET</p>
+                    <p>Ente FIRE</p>
                 </div>
-                
+
                 <div class="college">
                     <p>2018</p>
                     <p>Diploma di Elettricista/Elettrotecnica</p>
                     <p>Odero</p>
                 </div>
 
-                <div class="software-dev-qualification">
-                    <p>2019</p>
-                    <p>Qualifica di sviluppatore e programmatore .NET</p>
-                    <p>Ente FIRE</p>
+                <div class="regional-qualification">
+                    <p>2016</p>
+                    <p>Qualifica professionale di Elettricista di bordo</p>
+                    <p>Aesseffe</p>
                 </div>
             </div>
 
@@ -82,7 +82,7 @@
                 <h3>Experience</h3>
 
                 <div class="fos-group">
-                    <p>2019 - 2024</p>
+                    <p>2019 - ad oggi</p>
                     <h4>Gruppo Fos | Via E. Melen 77</h4>
 
                     <h2 class="job-title">Software Developer</h2>
